# 3dprinter

./: .gitignore  CHANGELOG.md  README.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  main.ts  style.css
app/src/components/: AccessoryCard.vue  AccessoryForm.vue  AddPrinterPrompt.vue  CatalogPicker.vue  EffectsPicker.vue  FilamentCard.vue  FilamentDetail.vue  FilamentForm.vue  (+9 more)
data/: filaments.json
data/catalog/: consumables.json  printers.json  replacement-parts.json
data/demo/: accessories.json  empty-spools.json  filaments.json
docs/: architecture.md  chunk-e-swatch-resolver.md  data-schemas.md  dev-testing.md  install.md  parallel-work.md  releaselog.md  tauri-packaging.md
docs/release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/user-guide/: 00-introduction.md  01-getting-started.md  02-filaments.md  03-ai-and-providers.md  04-colors-and-swatches.md  05-importing-orders.md  06-labels.md  07-accessories.md  08-shopping-list.md  09-empty-spools.md  10-filament-history.md  11-settings.md  12-printers.md  12-troubleshooting.md  13-troubleshooting.md  README.md
helper/: README.md  index.mjs  package-lock.json  package.json
scripts/: backfill-swatches.mjs  build-docs.mjs  build-prod.ps1  build-sidecar.mjs  install-shortcut.ps1  migrate-packaging.mjs  new-worktree.ps1  start.ps1  test-clean.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+37 files in other folders)
